--- a/MyAnalisy.ipynb
+++ b/MyAnalisy.ipynb
@@ -446,18 +446,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "926a2f8a-fe04-40da-b73a-74c8c0da6669",
    "metadata": {},
    "outputs": [],
    "source": [
-    "imagens_id = os.listdir(os.path.join(\"Images\",\"TCGA-BRCA\"))[1:]"
+    "imagens_id = os.listdir(os.path.join(\"Images\",\"TCGA-BRCA\"))[1:]\n",
+    "imagens_id = pd.Series(imagens_id, name=\"Patients_id\")\n",
+    "imagens_id.to_csv(\"Patients_with_image.csv\", index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "7a20318e-b3aa-4494-a877-ea39e57c3864",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Familias\n"
    ]
@@ -1506,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "2c96b80f-e0ec-4ccb-b967-164c1d018a66",
    "metadata": {},
    "outputs": [],
@@ -1524,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "2823c3fa-43fc-48c7-958a-66a4aa83d046",
    "metadata": {},
    "outputs": [
@@ -1534,7 +1538,7 @@
        "[Text(0.5, 1.0, 'Correlação de Spearman')]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1562,22 +1566,8 @@
    "id": "6b7f94f7-0603-4688-8adc-73e4b90ebd7d",
    "metadata": {},
    "source": [
-    "Como o esperado `Size/Lesion volume` e `Effective Diameter` São analogas. Removeremos as features redundantes"
+    "Como o esperado `Size/Lesion volume` e `Effective Diameter` São analogas. Consideraremos, redundante features com correlação maior que $0.8$."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c1bdcac9-6fc6-406f-aa26-f9f0b3cefbdc",
-   "metadata": {},
-   "source": [
-    "## Conclusões da Analise P value"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "77d8e868-ca6b-4a0e-a024-19d02c80af03",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1590,7 +1580,10 @@
   {
    "cell_type": "markdown",
    "id": "1560dc9e-ade3-47bb-a02c-9d7f4151bbec",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Mostrar que é inviavel clusterizar as features"
    ]
